"Update to handle side case"